# elysian-chem-bot

./: .gitignore  README.md  hello.py  pyproject.toml  ruff.toml
elysian_chem_bot/: __init__.py  __main__.py  command_helps.py  database.py  database_types.py  logging.py  main.py  utils.py
elysian_chem_bot/plugins/: dump.py  materials.py  materials_beta.py  sections.py
scripts/: add_license.py
