[project]
name = "elysian-chem-bot"
version = "0.1.0"
description = "Source code for https://t.me/ElysianChemBot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kurigram>=2.1.37",
    "tgbot-python-v2>=0.1.0",
    "tgcrypto>=1.2.5",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 120
