[project]
name = "elysian-chem-bot"
version = "0.1.0"
description = "Source code for https://t.me/ElysianChemBot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.8.0",
    "jsondb-hakimifr>=0.1.0",
    "kurigram>=2.1.37",
    "tgcrypto>=1.2.5",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]


##################################################################
##################### BEGIN SECTION FOR RUFF #####################
##################################################################
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D101",     # undocumented-public-class
    "D103",     # undocumented-public-function
    "D104",     # undocumented-public-package
    "ARG001",   # unused-function-argument
    "PLW0603",  # global-statement
    "D100",     # undocumented-public-module
    "TC001",    # typing-only-first-party-import
    "COM812",   # missing-trailing-comma
]

exclude = [
    "scripts/add_license.py",
    "elysian_chem_bot/coloured_logging_setup.py",
]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.pydocstyle]
convention = "google"
##################################################################
###################### end SECTION FOR RUFF ######################
##################################################################